修改了代码高亮
使用https://highlightjs.org的ir-black高亮方式

--- a/theme/quest/block/base.html
+++ b/theme/quest/block/base.html
@@ -46,8 +46,8 @@
 <script type="text/javascript" src="{{ site.url }}theme/quest/assets/js/quest.js?ver={{ site.version }}"></script>
 	
 {% if site.highlight %}
-<link rel="stylesheet" href="//cdn.bootcss.com/highlight.js/8.6/styles/default.min.css">
-<script src="//cdn.bootcss.com/highlight.js/8.6/highlight.min.js"></script>
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/styles/ir-black.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.9.0/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
 {% endif %}
 
